# linuxsockmsg

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
connection/: CMakeLists.txt
connection/include/: connection.h  connection_manager.h  exceptions.h
connection/src/: connection.cpp  connection_manager.cpp
server/: CMakeLists.txt
server/include/: logger.h  server.h  thread_pool.h
server/src/: logger.cpp  main.cpp  server.cpp  thread_pool.cpp
